# expense_tracker_streamlit

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  text_extraction.txt
data/: data_example - no_data_testing.csv  data_example.csv  data_example.xlsx  expense_tracker.csv  expense_tracker.xlsx
expense-tracker/pkgs/: metrics_dataclasses.py  plots.py
sandbox/: image_processing.py  test_ocr.py  text_extraction.py  text_extraction_easyocr.py
sql/: db_expense_tracker_creation.sql
src/: .gitignore  TEST_data_inserting.py  UI_data_inserting.py  app.py  🔎 Dashboard.py
src/.streamlit/: config.toml
src/UI_data_inserting/: UI_data_inserting.py
src/db/: sqlalchemy_db.py
src/pages/: second_page.py  🛢️ Data Management.py
src/pages - temp/: 🛢️ Data Management.py
src/pkgs/: CRUD.py  global_vars.py  metrics.py  metrics_dataclasses.py  ocr.py  plots.py  plots_dataclasses.py  sqlalchemy_db.py
src/style/: style.css  style.py
static/: data_example.csv
tests/: sandbox.py  test_metrics.py
