[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["alessandro-maccario <a.maccario1@campus.unimib.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
openpyxl = "^3.1.2"
streamlit = "^1.37.0"
plotly = "^5.20.0"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
ruff = "^0.5.1"
faker = "^26.0.0"
pytesseract = "^0.3.13"
opencv-python = "^4.10.0.84"
imutils = "^0.5.4"
scipy = "^1.14.1"
scikit-image = "^0.24.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
easyocr = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
